# rs-hex2int

./: Cargo.toml  README.md  example.sh
examples/json/: hex2i16be-input.json  hex2i16be-output.json  hex2i32be-input.json  hex2i32le-input.json  hex2i64be-output.json  hex2i8-output.json  hex2u16le-input.json  hex2u16le-output.json  hex2u32le-output.json  hex2u64be-input.json  hex2u64be-output.json  hex2u64le-input.json  hex2u8-input.json  hex2u8-output.json
src/: lib.rs
